処理が完了したら最初のソースコードを表示するように